@@ -39,7 +39,7 @@
   2aec3c75d5ccba91607e343bcc304f3baf24ae56 2012082702 mingw32-gdb.xml
   14dd10ab97b27430bdb688f4e85993cd821f7a05 2012073100 mingw32-gendef.xml
   84ba9fe58d5492be57bd8e41d10daa9fd8be4721 2012073100 mingw32-gettext.xml
-  0df0573fbfc77ce5fbf9a4949a57e6e61c7492fa 2012073100 mingw32-gmp.xml
+  b17b34405de37f8ee13721fd08da82ca63c3491f 2013082300 mingw32-gmp.xml
   99e3ac0d2c743b0d927a4d89a3153a975d2bdf87 2012073100 mingw32-libarchive.xml
   6019ce63b79e768e7c959504fcb5f4b08bf1fa7c 2012073100 mingw32-libiconv.xml
   ccc15973cdc9ff14c12e4385c3e692af1c18b29d 2012073100 mingw32-libtool.xml
@@ -48,9 +48,9 @@
   71b5ce19cd3f6da57625e75d0e3d7f1bfb4e698c 2012073100 mingw32-mgwport.xml
   8e49b4efd144afdfe5730de463045ee32a57d5e4 2012042600 mingw32-mingw-get.xml
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
-  d31c39c6584fde6d4b9ddafbca913509b32a1dfc 2012073100 mingw32-mpc.xml
-  99995a8e17659b6514f71ae2b17bbbcd8eb4c0a9 2012073100 mingw32-mpfr.xml
-  983af8ad24a6f97da867784dfeeecc6661d54d88 2013082303 mingw32-package-list.xml
+  d0657d9bc4fd5fa5bae78d80f003485cfde305c3 2013082300 mingw32-mpc.xml
+  9c47305797d932da02275a6894b30492440af00e 2013082300 mingw32-mpfr.xml
+  983af8ad24a6f97da867784dfeeecc6661d54d88 2013082305 mingw32-package-list.xml
   bad22da9b9ec9bcea1d539e29ee2976cc88d9fc2 2013053000 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   9399cb6c2efd8fd907c42a278a6f41bbde9e440c 2011091400 mingw32-pthreads-w32.xml
