@@ -1,3 +1,11 @@
+2013-08-25  Earnie Boyd  <earnie@users.sourceforge.net>
+
+	* mingw32/mingw32-gmp.xml: Add 5.1.2-1 release.
+	* mingw32/mingw32-mpfr.xml: Add 3.1.2-1 release.
+	* mingw32/mingw32-mpc.xml: Add 1.0.1-1 release.
+	* common/issue.log mingw32/issue.log: Update accordingly.
+	* .gitignore: Add .*.swp.
+
 2013-08-23  Earnie Boyd  <earnie@users.sourceforge.net>
 
 	* mingw32/mingw32-runtime.xml: Add mingwrt-4.0.0-1 and w32api-4.0.0-1.
